asteria/core/tests/errors/elaboration_errors/too_few_arguments_for_constructor.asteriacore
data Id (a : Type) where
   | MkId (x : a) : Test$Id(a)
   ;;

x : forall (a : Type). a -> Test$Id(a)
  = \{a} -> \x -> MkId(;)
  ;;
